Introduce pricing service for fare calculation and rule management.

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
         <module>service-registry</module>
         <module>api-gateway</module>
         <module>user-service</module>
+        <module>pricing-service</module>
+        <module>driver-location-service</module>
     </modules>
 
     <dependencyManagement>
