Implement ride-service for managing ride lifecycle and enhance driver-location-service with Redis-based location tracking.

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>user-service</module>
         <module>pricing-service</module>
         <module>driver-location-service</module>
+        <module>ride-service</module>
     </modules>
 
     <dependencyManagement>
