--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>pricing-service</module>
         <module>driver-location-service</module>
         <module>ride-service</module>
+        <module>payment-service</module>
     </modules>
 
     <dependencyManagement>
