--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <module>driver-location-service</module>
         <module>ride-service</module>
         <module>payment-service</module>
+        <module>notification-service</module>
     </modules>
 
     <dependencyManagement>
