--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <module>ride-service</module>
         <module>payment-service</module>
         <module>notification-service</module>
+        <module>rating-service</module>
     </modules>
 
     <dependencyManagement>
