--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,8 +7,10 @@ on:
     branches: [ main ]
 
 env:
-  DOCKER_REGISTRY: ghcr.io
-  IMAGE_PREFIX: ${{ github.repository_owner }}/ridesharing
+  PROJECT_ID: rideflux-487315
+  REGION: asia-south1
+  REPO_NAME: ridesharing
+  IMAGE_PREFIX: asia-south1-docker.pkg.dev/rideflux-487315/ridesharing
 
 jobs:
 
@@ -50,7 +52,7 @@ jobs:
 
     permissions:
       contents: read
-      packages: write
+      id-token: write
 
     strategy:
       matrix:
@@ -70,31 +72,41 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: service-jars
+
+      - name: Google Auth
+        id: auth
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: '${{ secrets.GCP_SA_KEY }}'
+
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+
+      - name: Configure Docker to use gcloud command-line tool as a credential helper
+        run: gcloud auth configure-docker asia-south1-docker.pkg.dev
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.DOCKER_REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push ${{ matrix.service }}
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: ./${{ matrix.service }}
           file: ${{ matrix.service }}/Dockerfile
           push: true
           tags: |
-            ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_PREFIX }}-${{ matrix.service }}:latest
-            ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_PREFIX }}-${{ matrix.service }}:${{ github.sha }}
+            ${{ env.IMAGE_PREFIX }}/${{ matrix.service }}:latest
+            ${{ env.IMAGE_PREFIX }}/${{ matrix.service }}:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
   # ==================== DEPLOY ====================
   deploy:
-    name: Deploy
+    name: Deploy to GCP VM
     runs-on: ubuntu-latest
     needs: docker
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
@@ -103,14 +115,30 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Deploy with Docker Compose
-        run: |
-          echo "🚀 Deployment step"
-          echo "In production, this would SSH into the server and run:"
-          echo "  docker compose pull"
-          echo "  docker compose up -d"
-          echo ""
-          echo "For cloud deployment (GCP/AWS/Azure), use their respective actions:"
-          echo "  - GCP: google-github-actions/deploy-cloudrun"
-          echo "  - AWS: aws-actions/amazon-ecs-deploy-task-definition"
-          echo "  - Azure: azure/webapps-deploy"
+      - name: Copy docker-compose.prod.yml to VM
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.GCP_VM_IP }}
+          username: ${{ secrets.GCP_VM_USER }}
+          key: ${{ secrets.GCP_VM_SSH_KEY }}
+          source: "docker-compose.prod.yml"
+          target: "~/"
+
+      - name: Deploy via SSH
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.GCP_VM_IP }}
+          username: ${{ secrets.GCP_VM_USER }}
+          key: ${{ secrets.GCP_VM_SSH_KEY }}
+          script: |
+            # Authenticate Docker again to be sure
+            gcloud auth configure-docker asia-south1-docker.pkg.dev --quiet
+            
+            # Pull latest images
+            docker compose -f docker-compose.prod.yml pull
+            
+            # Restart services
+            docker compose -f docker-compose.prod.yml up -d
+            
+            # Prune old images
+            docker image prune -f
