Fix API Gateway route for auth service

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -18,6 +18,11 @@ spring:
           filters:
             - StripPrefix=1
 
+        - id: auth-service
+          uri: lb://user-service
+          predicates:
+            - Path=/auth/**
+
         - id: ride-service
           uri: lb://ride-service
           predicates:
